# vigilant-broccoli

./: .eslintignore  .eslintrc.json  .gitignore  .gitleaks.toml  .gitmodules  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .stylelintignore  .stylelintrc.json  .upptimerc.yml  .vercelignore  APP_DEVELOPMENT.md  CI.md  CLAUDE.md  NOTES.MD  README.md  TODO.md  angular.json  gha-creds-7f9c3490039154dc.json  handover.md  package-lock.json  package.json  pastebin.md  pnpm-lock.yaml  renovate.json  test.ts  vigilant-broccoli.sln
.github/: dependabot.yml
GoogleCalendar/: config.py  forms.py  google_calendar.py  requirements.txt  run.py  utils.py
bruno/: bruno.json
bruno-collections/: bruno.json
dev-notes/: angular.md  brew.md  git.md  node.md
docs/: APP_DEVELOPMENT.md  CI.md  DEV_TOOLING.md  GIT.md  agent-diagram.md  app-readme-pattern.md  cheatsheet.md  index.html  infrastructure.md  nuance.md  refactor-code-cleanup.md  repo-operations.md  repo-patterns.md  stack.md
documentation/: dev-bookmarks.md  my-stack.md
dotfiles/: .aliases.zsh  .zshrc
express-demo/: README.md  app.const.ts  app.ts  errormiddleware.ts  middleware.ts  package-lock.json  router.ts
for-later/: vibecheck-spec.md
grind-75/: README.md  notes.txt
history/: cloud-8-skate.yml  cloud8-skate.yml  cloud8skate-com.yml  code-harryliu-dev.yml  code-server.yml  docs-harryliu-dev.yml  email-service.yml  email-subscription-service.yml  find-me.yml  findme.yml  git-harryliu-dev.yml  (+31 more)
projects/demo-apps/chatbot-chatterbot/: README.md  bot.py  cleaner.py  pyproject.toml  requirements.txt
(+5166 files in other folders)
