[tool.poetry]
name = "chatbot-chatterbot"
version = "0.1.0"
description = ""
authors = ["Harry Liu <harryliu1995@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
chatterbot = "1.0.4"
pytz = "^2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
